tests update